# Web-Parsing-Bot

./: .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  telegram_parser_bot.py  web_service.py
.github/workflows/: ci.yml
static/js/: script.js
templates/: index.html  login.html
tests/: conftest.py  test_config.py  test_web_service.py
web_parsing_bot/: __init__.py  __main__.py  bot.py  config.py  parser.py
web_parsing_bot/web/: __init__.py  service.py
web_parsing_bot/web/static/css/: style.css
web_parsing_bot/web/templates/: index.html  login.html
